Trimming cache, commenting out breadcrumbs, and adding skip link

--- a/restaurant.html
+++ b/restaurant.html
@@ -18,9 +18,12 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
+    <!-- There is no reason anyone sighted or not would need or use this
     <ul id="breadcrumb" >
       <li><a href="/">Home</a></li>
     </ul>
+    -->
+
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
