--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main>
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section>
+    <section id="maincontent">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
