small and medium css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name='mobile-web-app-capable' content='yes'> 
     
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Restaurant Reviews</title>
+  <link rel="stylesheet" href="css/styles.css" media="screen and (min-width:900px)" type="text/css">
+  <link rel="stylesheet" href="css/styles-medium.css" media="screen and (min-width:750px)" type="text/css">
+  <link rel="stylesheet" href="css/styles-small.css" media="screen and (min-width:500px)" type="text/css">  <title>Restaurant Reviews</title>
 </head>
 
 <body>
