--- a/restaurant.html
+++ b/restaurant.html
@@ -11,7 +11,9 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" media = "screen and (min-width:900px)" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" media="screen and (min-width:900px)" type="text/css">
+  <link rel="stylesheet" href="css/styles-medium.css" media="screen and (min-width:750px)" type="text/css">
+  <link rel="stylesheet" href="css/styles-small.css" media="screen and (min-width:500px)" type="text/css">
   <title>Restaurant Info</title>
 </head>
 
