--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name='mobile-web-app-capable' content='yes'> 
     
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css" media="screen and (min-width:900px)" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles-large.css" media="screen and (min-width:900px)" type="text/css">
   <link rel="stylesheet" href="css/styles-medium.css" media="screen and (min-width:750px) and (max-width:899px)" type="text/css">
   <link rel="stylesheet" href="css/styles-small.css" media="screen and (min-width:500px) and (max-width:749px)" type="text/css">  
   <title>Restaurant Reviews</title>
