--- a/restaurant.html
+++ b/restaurant.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
   <!-- Main CSS file   -->
-  <link rel="stylesheet" href="css/styles.css" media="screen and (min-width:900px)" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles-large.css" media="screen and (min-width:900px)" type="text/css">
   <link rel="stylesheet" href="css/styles-medium.css" media="screen and (min-width:750px) and (max-width:899px)" type="text/css">
   <link rel="stylesheet" href="css/styles-small.css" media="screen and (min-width:500px) and (max-width:749px)" type="text/css">  
 
