--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/styles-large.css" media="screen and (min-width:900px)" type="text/css">
   <link rel="stylesheet" href="css/styles-medium.css" media="screen and (min-width:750px) and (max-width:899px)" type="text/css">
   <link rel="stylesheet" href="css/styles-small.css" media="screen and (min-width:500px) and (max-width:749px)" type="text/css">  
+  <link rel="stylesheet" href="css/styles-xsmall.css" media="screen and (max-width:499px) and (max-width:749px)" type="text/css">  
   <title>Restaurant Reviews</title>
 </head>
 
@@ -34,7 +35,10 @@
     </section>
     <section tabindex="0" id="maincontent">
       <div class="filter-options">
-        <h2>Filter Results</h2>
+<!--
+  <h2>Filter Results</h2>
+-->
+
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
