--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -33,16 +33,16 @@
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section tabindex="0" id="maincontent">
+    <section tabindex="1" id="maincontent">
       <div class="filter-options">
 <!--
-  <h2>Filter Results</h2>
+  <label for="neighborhoods-select"></label>
 -->
-
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <h2>Filter Results</h2>
+        <select id="neighborhoods-select" tabindex="2" name="neighborhoods" role="combobox" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" tabindex="3" name="cuisines" role="combobox" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
