--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
   <h2>Filter Results</h2>
   <label for="neighborhoods-select"></label>
 -->
-        <label><h2>Filter by Neighborhood</h2>
+        <label><span class="menu-label">Filter by Neighborhood</span>
           <select id="neighborhoods-select" name="neighborhoods" role="combobox" onchange="updateRestaurants()">
-            <option value="all">All Neighborhoods</option>
+            <option value="all" role="option">All Neighborhoods</option>
           </select>
         </label>
 
-        <lable><h2>Filter by Cuisine</h2>
+        <label><span class="menu-label">Filter by Cuisine</span>
           <select id="cuisines-select" name="cuisines" role="combobox" onchange="updateRestaurants()">
-            <option value="all">All Cuisines</option>
+            <option value="all" role="option">All Cuisines</option>
           </select>
-        </lable>
+        </label>
 
       </div>
 
