--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <a href="#maincontent" tabindex="0" class="skip-link">Skip to main content</a>
   <header>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
@@ -39,13 +39,13 @@
   <h2>Filter Results</h2>
   <label for="neighborhoods-select"></label>
 -->
-        <label><span class="menu-label">Filter by Neighborhood</span>
+        <label><div class="menu-label">Filter by Neighborhood</div>
           <select id="neighborhoods-select" name="neighborhoods" role="combobox" onchange="updateRestaurants()">
             <option value="all" role="option">All Neighborhoods</option>
           </select>
         </label>
 
-        <label><span class="menu-label">Filter by Cuisine</span>
+        <label><div class="menu-label">Filter by Cuisine</div>
           <select id="cuisines-select" name="cuisines" role="combobox" onchange="updateRestaurants()">
             <option value="all" role="option">All Cuisines</option>
           </select>
