--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1' />
+  <meta name='viewport' content='user-scalable=yes, width=device-width, initial-scale=1' />
   <meta name='apple-mobile-web-app-capable' content='yes'>
   <meta name='mobile-web-app-capable' content='yes'> 
     
