Kicking CSS Butt

--- a/restaurant.html
+++ b/restaurant.html
@@ -55,7 +55,8 @@
         <div class="restaurant-info">
             <h2 id="restaurant-name"></h2>
             <!-- Beginning restaurant -->
-            <p id="restaurant-cuisine"></p>
+            <!-- <p id="restaurant-cuisine"></p> -->
+            
             <p id="restaurant-address"></p>
             <table id="restaurant-hours"></table>
                   <!-- Beginning reviews -->
