--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   -->
 
   <footer id="footer">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <strong>Restaurant Reviews</strong> All Rights Reserved.
   </footer>
 
 </body>
