--- a/restaurant.html
+++ b/restaurant.html
@@ -76,7 +76,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <strong>Restaurant Reviews</strong> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
