added aria role to map

--- a/restaurant.html
+++ b/restaurant.html
@@ -34,7 +34,7 @@
   <main>
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <!-- End map -->
     <div id="maincontent">
