--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main>
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <section id="maincontent">
       <div class="filter-options">
