Added links to idbPromised

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       scope: './'
     });
   </script>
-
+  <script src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=initMap"></script>
