--- a/restaurant.html
+++ b/restaurant.html
@@ -70,6 +70,7 @@
 
   <!-- Beginning scripts -->
   <!-- Database helpers -->
+  <script src="js/idb.js"></script>
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
