Getting idbPromised from CDN instead

--- a/restaurant.html
+++ b/restaurant.html
@@ -70,7 +70,8 @@
 
   <!-- Beginning scripts -->
   <!-- Database helpers -->
-  <script src="js/idb.js"></script>
+  <!-- <script src="js/idb.js"></script> -->
+  <script src="https://rawgit.com/jakearchibald/idb/master/lib/idb.js"></script>
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
