--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -72,9 +72,9 @@
   <!-- Database helpers -->
   <!-- <script src="js/idb.js"></script> -->
   <script src="https://rawgit.com/jakearchibald/idb/master/lib/idb.js"></script>
-  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
  <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
   <!-- End scripts -->
