--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,14 @@
       scope: './'
     });
   </script>
-  <!-- <script src="js/idb.js"></script> -->
-  <script src="https://rawgit.com/jakearchibald/idb/master/lib/idb.js"></script>
+  <!-- <script src="https://rawgit.com/jakearchibald/idb/master/lib/idb.js"></script> -->
+  <script src="js/idb.js"></script>
+  
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>  
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+
+  <script type="application/javascript" charset="utf-8" src="js/localControl.js"></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
   <script src="js/sw-logging.js"></script>
 
