--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -7,13 +7,18 @@
   <meta name='viewport' content='user-scalable=yes, width=device-width, initial-scale=1' />
   <meta name='apple-mobile-web-app-capable' content='yes'>
   <meta name='mobile-web-app-capable' content='yes'> 
+  <meta name="theme-color" content="#252831">
+
+  <!-- Manifest fo da PWS -->
+  <link rel="manifest" href="manifest.json">
 
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
   <!-- Main CSS file   -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css"> 
+  
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <link rel="stylesheet" href="css/styles.css" type="text/css"> 
   <title>Restaurant Info</title>
 </head>
 
