--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <a href="#maincontent" tabindex="0" class="skip-link">Skip to main content</a>
   <header>
     <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/">Restaurant <span class="yuck">Reviews</span></a></h1>
     </nav>
   </header>
 
