--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <!-- Manifest fo da PWS -->
     <link rel="manifest" href="manifest.json">
     
