--- a/public/restaurant2.html
+++ b/public/restaurant2.html
@@ -9,7 +9,7 @@
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous"> 
 
   <!-- Manifest fo da PWS -->
   <link rel="manifest" href="manifest.json">
