--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -18,9 +18,10 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
   <!-- Main CSS file   -->
-  
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <link rel="stylesheet" href="css/styles.css" type="text/css"> 
+  <link rel="stylesheet" href="css/yucky.css" type="text/css"> 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  
   <title>Restaurant Info</title>
 </head>
 
@@ -50,8 +51,8 @@
         <img id="restaurant-img">
         <div class="restaurant-info">
             <h2 id="restaurant-name"></h2>
+            <p><i id="heart" class="fas fa-heart"></i></p>
             <!-- Beginning restaurant -->
-            
             <p id="restaurant-address"></p>
             <table id="restaurant-hours"></table>
                   <!-- Beginning reviews -->
