--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -57,6 +57,14 @@
             <table id="restaurant-hours"></table>
                   <!-- Beginning reviews -->
             <div id="reviews-container">
+              <form method="POST" action="" id="reviewForm">
+                <input type="hidden" name="restaurant_id" value="">
+                <label>Name: <input type="text" name="name"></label>
+                <!-- rating needs required="required" -->
+                <label>Comments: <input type="textarea" rows="5" name="comments"></label>
+                <input type="submit" value="submit">
+              </form>
+              <div id="results"></div>
               <ul id="reviews-list"></ul>
             </div>
             <!-- End reviews -->
@@ -83,6 +91,7 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/yucky.js"></script>
   <!-- End scripts -->
 
 </body>
