--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -67,11 +67,11 @@
                   <label for="rating">Rating</label>
                   <select id="rating">
                     <option value="">Rate This Place</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
+                    <option value=1>1</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5</option>
                   </select>
                 </p>
                 <p>
@@ -111,9 +111,6 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
-  <!--  
-    <script type="application/javascript" charset="utf-8" src="js/yucky.js"></script>
-  -->
   
   <!-- End scripts -->
 
