--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -20,7 +20,10 @@
   <!-- Main CSS file   -->
   <link rel="stylesheet" href="css/styles.css" type="text/css"> 
   <link rel="stylesheet" href="css/yucky.css" type="text/css"> 
+  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css"> 
+  <!--
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  -->
   
   <title>Restaurant Info</title>
 </head>
