--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
+  <!--
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  -->  
 
   <!-- Manifest fo da PWS -->
   <link rel="manifest" href="manifest.json">
@@ -19,6 +21,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/> 
 
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+
   <title>Restaurant Reviews</title>
 </head>
 
