--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -9,7 +9,9 @@
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
 
+  <!--
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  -->  
 
   <!-- Manifest fo da PWS -->
   <link rel="manifest" href="manifest.json">
@@ -21,9 +23,8 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css"> 
   <link rel="stylesheet" href="css/yucky.css" type="text/css"> 
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css"> 
-  <!--
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  -->
   
   <title>Restaurant Info</title>
 </head>
@@ -54,7 +55,13 @@
         <img id="restaurant-img">
         <div class="restaurant-info">
             <h2 id="restaurant-name"></h2>
-            <p><i id="heart" class="fas fa-heart"></i></p>
+
+            <!--
+              <p><i id="heart" class="fas fa-heart"></i></p>
+            -->
+
+            <p><span id="heart">&hearts;</span></p>
+
             <!-- Beginning restaurant -->
             <p id="restaurant-address"></p>
             <table id="restaurant-hours"></table>
