--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,8 @@
   <meta name='apple-mobile-web-app-capable' content='yes'>
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
-
-  <!--
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  -->  
-
-  <!-- Manifest fo da PWS -->
+  <meta name="description" content="Reviews and information about local restaurants">
+  
   <link rel="manifest" href="manifest.json">
     
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
