--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -8,10 +8,7 @@
   <meta name='apple-mobile-web-app-capable' content='yes'>
   <meta name='mobile-web-app-capable' content='yes'> 
   <meta name="theme-color" content="#252831">
-
-  <!--
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  -->  
+  <meta name="description" content="Reviews and information about local restaurants">
 
   <!-- Manifest fo da PWS -->
   <link rel="manifest" href="manifest.json">
@@ -37,7 +34,6 @@
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
-
     <!-- End nav -->
   </header>
   <!-- End header -->
@@ -55,10 +51,6 @@
         <img id="restaurant-img">
         <div class="restaurant-info">
             <h2 id="restaurant-name"></h2>
-
-            <!--
-              <p><i id="heart" class="fas fa-heart"></i></p>
-            -->
 
             <p><span id="heart">&hearts;</span></p>
 
@@ -90,8 +82,6 @@
                 <p>
                     <input type="submit" value="submit">
                 </p>
-                
-                
 
               </form>
               <div id="results"></div>
@@ -99,12 +89,9 @@
             </div>
             <!-- End reviews -->
         </div>
-
       </section>
       <!-- end restaurant -->
-
     </div>
-
   </main>
   <!-- End main -->
 
@@ -115,13 +102,10 @@
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <!-- Beginning scripts -->
-  <!-- Database helpers -->
-  <!-- <script src="js/idb.js"></script> -->
-  <script src="https://rawgit.com/jakearchibald/idb/master/lib/idb.js"></script>
+  <script src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
-  
   <!-- End scripts -->
 
 </body>
